update code 22/6